0.0.4rc | unreleased
	- black formatting
	- replaced outdated terms with more inclusive language

0.0.3 | 2019.04.24
	packaging fix: adding python3 classifier

0.0.2 | 2018.10.17
	adjusting the API

0.0.1 | 2018.10.17
	initial import