@@ -1,6 +1,8 @@
 0.0.4rc | unreleased
 	- black formatting
 	- replaced outdated terms with more inclusive language
+	- upgraded black
+	- using pre-commit
 
 0.0.3 | 2019.04.24
 	packaging fix: adding python3 classifier
